# waste_management

./: Cargo.toml
data/: data.txt
