[package]
name = "waste_management"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = "*"
serde = { version="*", features = ["derive"] }
serde_json = "*"
simplebase = "*"
rust-crypto = "*"